--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -6,10 +6,15 @@
     <ul class="navbar-links">
       <!-- <li><a href="/">Início</a></li> -->
       <li><a href="/movies">Filmes</a></li>
+      <div class="navbar-vertical-separator"></div>
       <li><a href="/shows">Séries</a></li>
+      <div class="navbar-vertical-separator"></div>
       <li><a href="/actors">Atores</a></li>
+      <div class="navbar-vertical-separator"></div>
       <li><a href="/directors">Diretores</a></li>
+      <div class="navbar-vertical-separator"></div>
       <li><a href="/writers">Roteiristas</a></li>
+      <div class="navbar-vertical-separator"></div>
       <li><a href="/producers">Produtores</a></li>
     </ul>
   </div>
