Mudanças estéticas e conserto de buds na consulta de diretores por id da pessoa.

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -41,7 +41,7 @@
 
       <h2>Séries</h2>
 
-      <div class="media-row">
+      <div class="media-grid">
         <% if (shows && shows.length> 0) { %>
           <% shows.forEach(show=> { %>
             <div class="media-card">
