--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/error.css">
+  <link rel="icon" type="image/png" href="/images/Logo_RMGe_icon.png">
 </head>
 
 <body class="error-page">
