--- a/views/pages/show-details.ejs
+++ b/views/pages/show-details.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet" href="/css/media-details.css" />
+    <link rel="icon" type="image/png" href="/images/Logo_RMGe_icon.png">
     <title><%= pageTitle %></title>
   </head>
 
