genero no show details

--- a/views/pages/show-details.ejs
+++ b/views/pages/show-details.ejs
@@ -27,6 +27,9 @@
           <strong>Temporadas:</strong>
           <%= serie.numero_de_temporadas %>
         </p>
+        <p><strong>Gênero:</strong>
+          <%= genero && genero.length > 0 ? genero.map(g => g.genero).join(', ') : "N/A" %>
+        </p>
         <p>
           <strong>Faturamento:</strong>
           $ <%= serie.faturamento.toLocaleString('pt-BR') %>
