--- a/views/pages/episode-details.ejs
+++ b/views/pages/episode-details.ejs
@@ -40,7 +40,7 @@
       <div class="elenco-container">
         <% if (atores && atores.length> 0) { %> <% atores.forEach(ator=> { %>
         <div class="ator-card">
-          <a href="/actors/<%= ator.id %>" class="ator-link">
+          <a href="/actors/<%= ator._id %>" class="ator-link">
             <span class="ator-nome"> <%= ator.nome %> </span>
           </a>
           <span class="ator-personagem"> <%= ator.personagem %> </span>
