Correção de bugs. Agora o link para filmes é movie-details e episodios é episode-details.

--- a/views/pages/movie-details.ejs
+++ b/views/pages/movie-details.ejs
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/css/media-details.css" />
   <link rel="icon" type="image/png" href="/images/Logo_RMGe_icon.png">
   <title>
-    <%= pageTitle %>
+    RMGe: <%= pageTitle %> - Filme
   </title>
 </head>
 
