--- a/views/pages/episode-details.ejs
+++ b/views/pages/episode-details.ejs
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet" href="/css/media-details.css" />
     <link rel="icon" type="image/png" href="/images/Logo_RMGe_icon.png">
-    <title><%= pageTitle %></title>
+    <title>
+      RMGe: <%= pageTitle %> - Episódio
+    </title>
   </head>
 
   <body>
