--- a/views/pages/person-details.ejs
+++ b/views/pages/person-details.ejs
@@ -6,7 +6,9 @@
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/person-details.css">
   <link rel="icon" type="image/png" href="/images/Logo_RMGe_icon.png">
-  <title><%= pageTitle %></title>
+  <title>
+    RMGe: <%= pageTitle %>
+  </title>
 </head>
 <body>
   <%- include('../partials/navbar') %>
@@ -71,11 +73,11 @@
                   let mediaRoute = '/';
                   let mediaTitle = item.titulo || item.serie_nome; // Garante que há um título
                   // Lógica para determinar a rota correta
-                  if (item.tipo === 'Filme') {
+                  if (item.tipo === 'filme') {
                     mediaRoute = '/movie-details/' + item.midia_id;
-                  } else if (item.tipo === 'Episódio de Série') {
+                  } else if (item.tipo === 'episodio') {
                     // Assume que série_id e midia_id são passados corretamente
-                    mediaRoute = '/show-details/' + item.serie_id; 
+                    mediaRoute = '/episode-details/' + item.midia_id; 
                   } 
                 %>
                 <a href="<%= mediaRoute %>"><%= mediaTitle %></a>
@@ -95,10 +97,10 @@
                 <% 
                   let mediaRoute = '/';
                   let mediaTitle = item.titulo || item.serie_nome;
-                  if (item.tipo === 'Filme') {
+                  if (item.tipo === 'filme') {
                     mediaRoute = '/movie-details/' + item.midia_id;
-                  } else if (item.tipo === 'Episódio de Série') {
-                    mediaRoute = '/show-details/' + item.serie_id;
+                  } else if (item.tipo === 'episodio') {
+                    mediaRoute = '/episode-details/' + item.midia_id;
                   } 
                 %>
                 <a href="<%= mediaRoute %>"><%= mediaTitle %></a>
@@ -117,11 +119,11 @@
               <span class="filme-titulo">
                 <% 
                   let mediaRoute = '/';
-                  let mediaTitle = item.titulo || item.serie_nome;
-                  if (item.tipo === 'Filme') {
+                  let mediaTitle = item.titulo;
+                  if (item.tipo === 'filme') {
                     mediaRoute = '/movie-details/' + item.midia_id;
-                  } else if (item.tipo === 'Episódio de Série') {
-                    mediaRoute = '/show-details/' + item.serie_id;
+                  } else if (item.tipo === 'episodio') {
+                    mediaRoute = '/episode-details/' + item.midia_id;
                   } 
                 %>
                 <a href="<%= mediaRoute %>"><%= mediaTitle %></a>
@@ -141,10 +143,10 @@
                 <% 
                   let mediaRoute = '/';
                   let mediaTitle = item.titulo || item.serie_nome;
-                  if (item.tipo === 'Filme') {
+                  if (item.tipo === 'filme') {
                     mediaRoute = '/movie-details/' + item.midia_id;
-                  } else if (item.tipo === 'Episódio de Série') {
-                    mediaRoute = '/show-details/' + item.serie_id;
+                  } else if (item.tipo === 'episodio') {
+                    mediaRoute = '/episode-details/' + item.midia_id;
                   } 
                 %>
                 <a href="<%= mediaRoute %>"><%= mediaTitle %></a>
